# t-maker

./: .env.example  .gitignore  README.md
artifacts/: ai-replay-300502-300308-2026-05-08_2026-06-12-paired-summary.json  ai-replay-300502-300308-2026-05-08_2026-06-12-summary.json  combined-strategy-lab-summary.json  (+19 more)
backend/: pyproject.toml
backend/.codex-tmp/: combined_strategy_lab.py  run_30d_review.py  run_tdx_3m_review.py  three_month_ai_replay_stats.py
backend/src/tmaker/: __init__.py  config.py
backend/src/tmaker/api/: app.py
backend/src/tmaker/domain/: __init__.py  models.py
backend/src/tmaker/llm/: __init__.py  codex_analysis.py  context.py  openai_client.py  review.py
backend/src/tmaker/market/: akshare_provider.py  bars.py  eastmoney_provider.py  stock_search.py  tdx_provider.py  tencent_provider.py
backend/src/tmaker/monitor/: __init__.py  policy.py  runner.py  state.py
backend/src/tmaker/notify/: feishu.py
backend/src/tmaker/storage/: __init__.py  postgres.py
backend/src/tmaker/strategy/: __init__.py  indicators.py  market_context.py  replay.py  rules.py  t_pairing.py
backend/tests/: test_akshare_provider.py  test_api.py  test_bar_builder.py  test_codex_analysis.py  test_eastmoney_provider.py  test_feishu_notify.py  test_indicators.py  test_llm_context.py  test_llm_review.py  test_market_context.py  test_models.py  test_monitor_policy.py  test_monitor_runner.py  test_openai_client.py  test_postgres_storage.py  test_replay.py  test_rules.py  test_t_pairing.py  test_tdx_provider.py  test_tencent_provider.py  test_trade_confirmations.py
(+27 files in other folders)
